# Mathematics-ML

./: .gitignore  PORTFOLIO_STRATEGY.md  README.md  build.sh  package-lock.json  start.sh
planning_docs/: Geometric ML, Rust Optimization_.md  Portfolio Projects_ Machine Learning with Differen.md
tda_rust_core/: Cargo.toml
tda_rust_core/src/: lib.rs
tda_visualizer_app/: .eslintrc.js  package-lock.json  package.json
tda_visualizer_app/src/: App.css  App.js  wasmLoader.js
tda_visualizer_app/src/components/: MapperVisualization.js
tda_visualizer_app/src/wasm/: package.json  tda_rust_core.d.ts  tda_rust_core.js  tda_rust_core_bg.js  tda_rust_core_bg.wasm
web_visualizer/: package-lock.json  package.json
web_visualizer/public/: index.html
web_visualizer/src/: App.css  App.js
web_visualizer/src/components/: PersistenceBarcode.js  PersistenceDiagram.js.bak  PointCloudCanvas.js.bak
