[package]
name = "tda_rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Performance"] }
ndarray = "0.15"
petgraph = "0.6"
nalgebra = "0.32"